# publish-package-to-ghrelease-and-pypi

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
src/: LICENSE
src/packver_ghrelease_and_pypi/: app.py
