[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
[project]
name = "pack-ver-ghrelease-and-pypi"
#version = "0.0.1"
authors = [
  { name="Vijai Kannan", email="vijaik.nd@gmail.com" },
]
description = "A small example package creation and release by Vijai Kannan"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"